unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/GW_Volunteers__Volunteer_Job__c.object-meta.xml
<CustomObject>
    <label>Volunteer Job</label>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>