unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Age_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Age_Requirement__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>MLF Custom May 2024. Used to indicate if there is a Minimum Age Requirement</description>
    <inlineHelpText>Select Yes if the Job has a minimum age requirement. If Yes is selected ensure that the Minimum Age field reflects the minimum age in year.</inlineHelpText>
    <label>Age Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>