unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Age_Requirement_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Age_Requirement_Image_URL__c</fullName>
    <label>Age Requirement Image URL</label>
    <type>Url</type>
</CustomField>