unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MLF customization in 2017. Can be used by the Volunteer Team to identify Jobs that require a Background Check be completed on the volunteer.</description>
    <inlineHelpText>Select this box if a Background Check must be completed on volunteers before they can perform this volunteer opportunity.</inlineHelpText>
    <label>Background Check</label>
    <type>Checkbox</type>
</CustomField>