unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Brunch__c.field-meta.xml
<CustomField>
    <fullName>Brunch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if brunch is provided</description>
    <label>Brunch</label>
    <type>Checkbox</type>
</CustomField>