unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Family_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Family_Friendly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Friendly</label>
    <type>Checkbox</type>
</CustomField>