unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/fortafy_Group_Account__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Group_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the organization associated with the Group Event.</inlineHelpText>
    <label>Group Account</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only Household Accounts and Org Accounts can be used</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Community</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>