unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/fortafy_Location__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>fortafy_Location__c.fortafy_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>fortafy_Location__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>