unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/fortafy_LocationWebsite__c.field-meta.xml
<CustomField>
    <fullName>fortafy_LocationWebsite__c</fullName>
    <label>Location Website</label>
    <type>Url</type>
</CustomField>