unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Group_Contact__c.field-meta.xml
<CustomField>
    <fullName>Group_Contact__c</fullName>
    <description>Contact info for group volunteer</description>
    <inlineHelpText>Contact info for group volunteer (name, email, phone)</inlineHelpText>
    <label>Group Contact</label>
    <type>TextArea</type>
</CustomField>