unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Campaign__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>