unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__External_Signup_Url__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__External_Signup_Url__c</fullName>
    <description>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</description>
    <inlineHelpText>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</inlineHelpText>
    <label>External Signup Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>