unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__First_Shift__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__First_Shift__c</fullName>
    <label>First Shift</label>
    <summarizedField>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Start_Date_Time__c</summarizedField>
    <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>