unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Inactive__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this Volunteer Job is no longer active, and it won&#39;t be included in the Volunteers Report Hours Sites page.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>