unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Location__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Location__c</fullName>
    <label>Location State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>