unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Location_Information__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Location_Information__c</fullName>
    <inlineHelpText>Put in any additional details, like driving directions or a URL to a map, in this field, and it will be included in automated email reminders.</inlineHelpText>
    <label>Location Information</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>