unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Number_of_Volunteers_Still_Needed__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</fullName>
    <label># of Volunteers Still Needed</label>
    <summarizedField>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
    <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>