unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/GW_Volunteers__Ongoing__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Ongoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing</label>
    <type>Checkbox</type>
</CustomField>