unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Handicap_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Handicap_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handicap Accessible</label>
    <type>Checkbox</type>
</CustomField>