unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Indoors__c.field-meta.xml
<CustomField>
    <fullName>Indoors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indoors</label>
    <type>Checkbox</type>
</CustomField>