unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Intern_Job__c.field-meta.xml
<CustomField>
    <fullName>Intern_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intern Job</label>
    <type>Checkbox</type>
</CustomField>