unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Job_header_image__c.field-meta.xml
<CustomField>
    <fullName>Job_header_image__c</fullName>
    <label>Job header image</label>
    <type>Url</type>
</CustomField>