unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Job_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Link__c</fullName>
    <description>May 2024. MLF update. Changed Field Label from &quot;Job Link (Old)&quot; to &quot;Registration Link&quot; as a task for the new Volunteer Portal project</description>
    <formula>&quot;https://mlf.secure.force.com/volunteers/GW_Volunteers__VolunteersJobListingFS?jobId=&quot;&amp;Id&amp;&quot;&amp;nMonthstoShow=12&amp;ShowNumberAvailable=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Link</label>
    <type>Text</type>
</CustomField>