unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <formula>fortafy_Location__r.fortafy_Street__c &amp;&quot;, &quot;&amp; fortafy_Location__r.fortafy_City__c &amp;&quot;, &quot; &amp; fortafy_Location__r.fortafy_State__c &amp;&quot; &quot;&amp; fortafy_Location__r.fortafy_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>