unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <description>MLF Custom May 2024. Minimum Age in Years required to volunteer for the Job.</description>
    <inlineHelpText>Indicate a volunteer&#39;s minimum age in years required to volunteer for the Job.</inlineHelpText>
    <label>Minimum Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>