unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Phase_II_Build__c.field-meta.xml
<CustomField>
    <fullName>Phase_II_Build__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sept 2019-C.Hoffart This field was added to identify the recurring groups of sponsored home builds to build out Phase II. This field will enable us to identify and manage these jobs in a unique way since they differ from other mainstream Volunteer Jobs.</description>
    <inlineHelpText>Select this box -only- if this Volunteer Job is for the recurring group of home builds for Phase II</inlineHelpText>
    <label>Phase II Build</label>
    <type>Checkbox</type>
</CustomField>