unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Prerequisite_training_required__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_training_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prerequisite training required</label>
    <type>Checkbox</type>
</CustomField>