unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Private_Event__c.field-meta.xml
<CustomField>
    <fullName>Private_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MLF customization may 2024. Used to flag a Job as a private event.</description>
    <inlineHelpText>Select this if the Job is a private event that you do not want posted on the public facing Volunteer Calendar</inlineHelpText>
    <label>Private Event</label>
    <type>Checkbox</type>
</CustomField>