unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <description>The public URL to access this job through the portal.</description>
    <formula>&#39;https://serve.mlf.org/s/volunteer-job/&#39;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The public URL to access this job through the portal.</inlineHelpText>
    <label>Public URL</label>
    <type>Text</type>
</CustomField>