unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <description>Text for reminder email</description>
    <label>Reminder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>