unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Resident_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Resident_s_Name__c</fullName>
    <label>Resident&#39;s Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>