unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <formula>&#39;https://goodness--vp.sandbox.my.site.com/vpstandard/s/volunteer-job/&#39;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>temp</label>
    <type>Text</type>
</CustomField>