unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Volunteer_Follow_Up_Thank_You__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Follow_Up_Thank_You__c</fullName>
    <description>Text for volunteer follow up thank you after the volunteer shift takes place</description>
    <label>Volunteer Follow Up Thank You</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>