unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/listViews/All_Active_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Active_Jobs</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Campaign__c</columns>
    <columns>GW_Volunteers__Number_of_Volunteers__c</columns>
    <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
    <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
    <columns>GW_Volunteers__Ongoing__c</columns>
    <columns>GW_Volunteers__Display_on_Website__c</columns>
    <columns>GW_Volunteers__Inactive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active Jobs</label>
</ListView>