unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/listViews/Cancelled_Jobs.listView-meta.xml
<ListView>
    <fullName>Cancelled_Jobs</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Campaign__c</columns>
    <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
    <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
    <columns>GW_Volunteers__Ongoing__c</columns>
    <columns>GW_Volunteers__Inactive__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Inactive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cancelled Jobs</label>
</ListView>