unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/listViews/Community_Inn_Volunteer_Jobs.listView-meta.xml
<ListView>
    <fullName>Community_Inn_Volunteer_Jobs</fullName>
    <columns>GW_Volunteers__Campaign__c</columns>
    <columns>GW_Volunteers__Inactive__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Display_on_Website__c</columns>
    <columns>GW_Volunteers__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Campaign__c</field>
        <operation>equals</operation>
        <value>Community Inn</value>
    </filters>
    <filters>
        <field>GW_Volunteers__Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Community Inn - Volunteer Jobs</label>
</ListView>