unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/listViews/Jobs_by_Job_Name.listView-meta.xml
<ListView>
    <fullName>Jobs_by_Job_Name</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>GW_Volunteers__Inactive__c</columns>
    <columns>GW_Volunteers__Campaign__c</columns>
    <columns>GW_Volunteers__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Community Inn</value>
    </filters>
    <label>Jobs by Job Name</label>
</ListView>