unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/listViews/Jobs_search_Job_Description_field.listView-meta.xml
<ListView>
    <fullName>Jobs_search_Job_Description_field</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Inactive__c</columns>
    <columns>GW_Volunteers__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Jobs - search Job Description field</label>
</ListView>