unpackaged/main/default/objects/GW_Volunteers__Volunteer_Job__c/listViews/Phase_II_Builds.listView-meta.xml
<ListView>
    <fullName>Phase_II_Builds</fullName>
    <columns>Phase_II_Build__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>GW_Volunteers__First_Shift__c</columns>
    <columns>GW_Volunteers__Number_of_Volunteers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase_II_Build__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Phase II Builds</label>
</ListView>